# mebsuta

./: .gitignore  AUDIT_REPORT.md  CHANGELOG.md  COMPLETION_REPORT.md  Cargo.toml  MIGRATION.md  PLAN.md  README.md  SECURITY.md  async_handler.go  async_handler_test.go  benchmark_test.go  closeall_test.go  config.go  config_test.go  context_extractor.go  context_extractor_test.go  contract_handler.go  database_handler.go  docker-compose.yml  example_test.go  examples_test.go  file_handler.go  file_handler_test.go  go.mod  go.sum  go.work  handler.go  handler_async.go  handler_async_test.go  handler_chain_test.go  handler_context.go  handler_context_test.go  handler_file.go  handler_file_test.go  handler_json.go  handler_json_test.go  handler_metrics.go  handler_multi.go  handler_option_test.go  (+24 more)
.github/: dependabot.yml
attrutil/: attrutil.go  attrutil_test.go  go.mod
audit/: audit.go  audit_test.go  go.mod
config/: builder.go  builder_example_test.go  config_test.go  sanitizer.go  types.go  validate.go
core/: benchmark_test.go  event.go  logger.go  sampling.go  sampling_test.go  structured_core.go
database/: config.go  database_error_test.go  database_handler.go  database_handler_lifecycle_test.go  database_handler_test.go  go.mod  go.sum  (+3 more)
go/: go.mod  (+22 more)
mebsuta/: Cargo.toml
mebsuta/benches/: handler_bench.rs
mebsuta/examples/: async.rs  basic.rs  sampling.rs  stdout.rs
mebsuta/src/: async_handler.rs  config.rs  context.rs  database.rs  error.rs  file.rs  handler.rs  level.rs  lib.rs  multi.rs  record.rs  sampling.rs  stdout.rs  syslog.rs  time.rs  value.rs
(+113 files in other folders)
