[package]
name = "mebsuta"
description = "Structured logging library with Handler plugin architecture"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
flate2.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "handler_bench"
harness = false
